--- a/app/src/main/res/layout/movie_detail_activity.xml
+++ b/app/src/main/res/layout/movie_detail_activity.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="br.com.ecarrara.popularmovies.movies.presentation.MovieDetailActivity">
+    tools:context="br.com.ecarrara.popularmovies.movies.presentation.view.MovieDetailActivity">
 
     <ProgressBar
         android:id="@+id/progress_indicator"
