--- a/app/src/main/res/layout/movie_detail_activity.xml
+++ b/app/src/main/res/layout/movie_detail_activity.xml
@@ -4,10 +4,10 @@
     android:id="@+id/activity_movie_detail"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/movie_detail_view_padding_bottom"
+    android:paddingStart="@dimen/movie_detail_view_padding_left"
+    android:paddingEnd="@dimen/movie_detail_view_padding_right"
+    android:paddingTop="@dimen/movie_detail_view_padding_top"
     tools:context="br.com.ecarrara.popularmovies.movies.presentation.view.MovieDetailActivity">
 
     <ProgressBar
