fix: apply NestedScrollView to improve Movie Synopsis text reading
Signed-off-by: Eduardo Carrara <ecarrara.araujo@gmail.com>

--- a/app/src/main/res/layout/movie_detail_activity.xml
+++ b/app/src/main/res/layout/movie_detail_activity.xml
@@ -111,12 +111,16 @@
                 android:textStyle="bold"
                 android:text="@string/synopsis"/>
 
-            <TextView
-                android:id="@+id/movie_synopsis_text_view"
+            <android.support.v4.widget.NestedScrollView
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1"
-                tools:text="Loren ipsum wololo very long text....."/>
+                android:layout_weight="1">
+                <TextView
+                    android:id="@+id/movie_synopsis_text_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    tools:text="Loren ipsum wololo wololo wololo wololo very long text....."/>
+            </android.support.v4.widget.NestedScrollView>
 
         </LinearLayout>
 
