feature: reviews - presentation layer
Signed-off-by: Eduardo Carrara <ecarrara.araujo@gmail.com>

--- a/app/src/main/res/layout/movie_detail_activity.xml
+++ b/app/src/main/res/layout/movie_detail_activity.xml
@@ -128,6 +128,10 @@
                         android:id="@+id/movie_trailer_container"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>
+                    <FrameLayout
+                        android:id="@+id/movie_reviews_container"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
                 </LinearLayout>
             </android.support.v4.widget.NestedScrollView>
 
