--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,8 @@
     <color name="accent">#FF5252</color>
     <color name="primaryText">#212121</color>
     <color name="secondaryText">#757575</color>
-    <color name="icons">#FFFFFF</color>
+    <color name="icons">@color/white</color>
     <color name="divider">#BDBDBD</color>
+
+    <color name="white">#FFFFFF</color>
 </resources>
