feature: display favorite movies list
Signed-off-by: Eduardo Carrara <ecarrara.araujo@gmail.com>

--- a/app/src/main/res/menu/movie_list_menu.xml
+++ b/app/src/main/res/menu/movie_list_menu.xml
@@ -16,4 +16,11 @@
         android:icon="@drawable/ic_star_border"
         app:showAsAction="ifRoom" />
 
+    <item
+        android:id="@+id/menu_action_load_favorites"
+        android:orderInCategory="3"
+        android:title="@string/favorites"
+        android:icon="@drawable/ic_heart_border"
+        app:showAsAction="ifRoom" />
+
 </menu>
