--- a/app/src/main/res/layout/movie_list_activity.xml
+++ b/app/src/main/res/layout/movie_list_activity.xml
@@ -21,9 +21,7 @@
         android:id="@+id/recycler_view_movie_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/bottom_navigation_menu_movies_filtering"
-        android:paddingStart="@dimen/movie_list_view_padding_left"
-        android:paddingEnd="@dimen/movie_list_view_padding_right" />
+        android:layout_above="@id/bottom_navigation_menu_movies_filtering" />
 
     <ProgressBar
         android:id="@+id/progress_indicator"
