--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="divider">#BDBDBD</color>
 
     <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
 </resources>
