--- a/app/src/main/res/layout/trailer_list_fragment.xml
+++ b/app/src/main/res/layout/trailer_list_fragment.xml
@@ -18,9 +18,10 @@
 
     <TextView
         android:id="@+id/text_view_error_message"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:gravity="center"
         android:visibility="gone"
         tools:text="This is a sample error message" />
 
