--- a/app/src/main/res/layout/movie_review_list_item.xml
+++ b/app/src/main/res/layout/movie_review_list_item.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="@dimen/movie_review_list_item_margin"
     card_view:cardCornerRadius="@dimen/movie_review_list_item_card_corner_radius">
 
     <LinearLayout
