--- a/app/src/main/res/layout/movie_reviews_list_fragment.xml
+++ b/app/src/main/res/layout/movie_reviews_list_fragment.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="br.com.ecarrara.popularmovies.reviews.presentation.view.MovieReviewsFragment">
 
@@ -19,9 +19,10 @@
 
     <TextView
         android:id="@+id/text_view_error_message"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:gravity="center"
         android:visibility="gone"
         tools:text="This is a sample error message" />
 
@@ -33,4 +34,4 @@
         android:contentDescription="@string/retry_button_description"
         android:visibility="gone" />
 
-</LinearLayout>
+</FrameLayout>
