--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,6 +20,7 @@
     <dimen name="movie_detail_view_padding_right">@dimen/movie_list_item_padding_left</dimen>
     <dimen name="movie_detail_view_padding_top">16dp</dimen>
     <dimen name="movie_detail_view_padding_bottom">@dimen/movie_detail_view_padding_top</dimen>
+    <dimen name="movie_detail_view_poster_height">100dp</dimen>
 
     <!-- Trailers List Item -->
     <dimen name="trailer_list_item_padding_left">8dp</dimen>
