refactor: using dimens resources for layout dimensions
Signed-off-by: Eduardo Carrara <ecarrara.araujo@gmail.com>

--- a/app/src/main/res/layout/movie_detail_activity.xml
+++ b/app/src/main/res/layout/movie_detail_activity.xml
@@ -9,7 +9,7 @@
         android:id="@+id/movie_detail_backdrop_image_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:elevation="2dp"
+        android:elevation="@dimen/movie_detail_view_default_elevation"
         android:scaleType="center"
         android:visibility="visible"
         app:layout_constraintDimensionRatio="h,16:9"
@@ -24,10 +24,10 @@
         android:layout_width="0dp"
         android:layout_height="@dimen/movie_detail_view_poster_height"
         android:layout_marginBottom="0dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginLeft="@dimen/movie_detail_view_padding_left"
+        android:layout_marginStart="@dimen/movie_detail_view_padding_left"
         android:layout_marginTop="0dp"
-        android:elevation="3dp"
+        android:elevation="@dimen/movie_detail_view_poster_elevation"
         android:scaleType="center"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@+id/movie_detail_release_date_text_view"
@@ -40,11 +40,11 @@
         android:id="@+id/movie_detail_original_title_text_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginEnd="@dimen/movie_detail_view_padding_right"
+        android:layout_marginLeft="@dimen/movie_detail_view_padding_left"
+        android:layout_marginRight="@dimen/movie_detail_view_padding_right"
+        android:layout_marginStart="@dimen/movie_detail_view_padding_left"
+        android:layout_marginTop="@dimen/movie_detail_view_padding_top_large"
         android:textSize="18sp"
         android:textStyle="bold"
         android:visibility="visible"
@@ -58,8 +58,7 @@
         android:id="@+id/movie_detail_release_date_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="0dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="@dimen/movie_detail_view_padding_top"
         android:visibility="visible"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintLeft_toLeftOf="@+id/movie_detail_original_title_text_view"
@@ -70,7 +69,7 @@
         android:id="@+id/movie_detail_rating_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
+        android:layout_marginStart="@dimen/movie_detail_view_padding_left"
         android:drawableStart="@drawable/ic_star"
         android:gravity="center_vertical"
         android:textStyle="bold"
@@ -83,11 +82,9 @@
 
     <CheckBox
         android:id="@+id/movie_detail_add_to_favorites_checkbox"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:layout_marginBottom="0dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="0dp"
+        android:layout_width="@dimen/movie_detail_view_squared_button_side"
+        android:layout_height="@dimen/movie_detail_view_squared_button_side"
+        android:layout_marginEnd="@dimen/movie_detail_view_padding_right"
         android:background="@drawable/favorites_add_button_background_state_selector"
         android:button="@null"
         android:visibility="visible"
@@ -135,7 +132,7 @@
         android:id="@+id/movie_details_more_info_view_pager"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="@dimen/movie_detail_view_padding_top"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -150,7 +147,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="top"
             android:background="@color/white"
-            android:elevation="2dp"
+            android:elevation="@dimen/movie_detail_view_default_elevation"
             app:tabSelectedTextColor="@color/accent"/>
 
     </android.support.v4.view.ViewPager>
@@ -159,9 +156,6 @@
         android:id="@+id/divider"
         android:layout_width="0dp"
         android:layout_height="1dp"
-        android:layout_marginBottom="0dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
         android:background="@color/divider"
         app:layout_constraintBottom_toTopOf="@+id/movie_details_more_info_view_pager"
         app:layout_constraintHorizontal_bias="0.501"
