--- a/app/src/main/res/layout/movie_details_synopsis_fragment.xml
+++ b/app/src/main/res/layout/movie_details_synopsis_fragment.xml
@@ -12,19 +12,15 @@
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="0dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="0dp"
-        android:layout_marginLeft="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="0dp"
         app:layout_constraintRight_toRightOf="parent">
 
         <TextView
             android:id="@+id/movie_detail_synopsis_text_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="16dp"
+            android:padding="@dimen/synopsis_view_default_padding"
             tools:text="Loren ipsum wololo wololo wololo wololo very long text....." />
 
     </android.support.v4.widget.NestedScrollView>
