--- a/app/src/main/res/layout/movie_list_item.xml
+++ b/app/src/main/res/layout/movie_list_item.xml
@@ -32,10 +32,10 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="@dimen/movie_list_view_default_padding"
+        android:layout_marginLeft="@dimen/movie_list_view_default_padding"
+        android:layout_marginRight="@dimen/movie_list_view_default_padding"
+        android:layout_marginTop="@dimen/movie_list_view_default_padding"
         app:layout_constraintBottom_toBottomOf="@+id/image_view_movie_poster"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -45,10 +45,10 @@
         android:id="@+id/text_view_error_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="@dimen/movie_list_view_default_padding"
+        android:layout_marginLeft="@dimen/movie_list_view_default_padding"
+        android:layout_marginRight="@dimen/movie_list_view_default_padding"
+        android:layout_marginTop="@dimen/movie_list_view_default_padding"
         android:gravity="center"
         android:text="@string/movie_list_poster_loading_error_message"
         android:visibility="visible"
@@ -60,12 +60,12 @@
 
     <ImageView
         android:id="@+id/image_view_error_icon"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="@dimen/movie_list_view_squared_button_side"
+        android:layout_height="@dimen/movie_list_view_squared_button_side"
+        android:layout_marginBottom="@dimen/movie_list_view_default_padding"
+        android:layout_marginLeft="@dimen/movie_list_view_default_padding"
+        android:layout_marginRight="@dimen/movie_list_view_default_padding"
+        android:layout_marginTop="@dimen/movie_list_view_default_padding"
         android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/text_view_error_message"
         app:layout_constraintHorizontal_bias="0.501"
